[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesnova"
version = "0.1.0"
authors = [
  { name="Jacob Osman Hjortlund", email="jacob.hjortlund@gmail.com" },
]
description = "A two population hierarchical Bayesian model framework for Type Ia supernovae cosmology."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.23.5", # c
    "scipy==1.8.1", # c
    "pandas==1.5.3", # c
    "seaborn==0.12.2", # c
    "matplotlib==3.7.1", # c
    "corner==2.2.1", # cf
    "emcee==3.1.4", # cf
    "mpi4py==3.1.3", # cf
    "h5py==3.7.0", # c
    "numba==0.57.0", # c
    "astropy==5.1", # c
    "numbalsoda==0.3.4",
    "NumbaQuadPack@git+https://github.com/jacob-hjortlund/NumbaLogQuadpack.git",
    "hydra-core==1.3.2", # cf 
    "jax==0.4.12", # cf
    "jaxlib==0.4.12", # cf
    "jaxtyping==0.2.20",
    "diffrax==0.4.0", # cf
    "equinox==0.10.6", # cf
    "tqdm==4.65.0", # cf
    "schwimmbad==0.3.2", # cf
    "deepdiff==6.3.0" # cf
]

[project.optional-dependencies]
test = []

scripts = [
    "clearml==1.11.0" # cf
]

[project.urls]
"Homepage" = "https://github.com/jacob-hjortlund/BayeSNova"